# pact-ai

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GEAS_MANIFESTO.md  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  mkdocs.yml  pyproject.toml  versions.json
.geas/: active_context.md  state.json
.geas/archive/lifecycle/: 01_request.md  02_specs.md  03_plan.md  lock.json
.geas/archive/step_1_identity/: 02_specs.md
.geas/archive/step_4_archival/: 03_plan.md
.geas/bolts/step_1_identity/: 01_request.md
.geas/bolts/step_4_archival/: 01_request.md  02_specs.md  lock.json
.geas/config/: agents.yaml
.geas_legacy/: active_context.md
.geas_legacy/archive/chore-repo/: 03_plan.md
.geas_legacy/archive/feature-agents/: 02_specs.md  03_plan.md
.geas_legacy/archive/feature-pact-init/: 03_plan.md
.geas_legacy/archive/feature-pact-new/: 02_specs.md
.geas_legacy/archive/pact-seal-command/: 01_request.md  03_plan.md
.geas_legacy/archive/step_1_identity/: 01_request.md  (+1 more)
.github/workflows/: ci.yml  docs.yml  publish.yml
.pacts/: active_context.md
dev/: 404.html  index.html  objects.inv
dev/AGENT_CONTEXT/: index.html
dev/TRINITY_LOCK/: index.html
dev/WHITE_PAPER/: index.html
dev/getting_started/: index.html
dev/reference/: index.html
dev/search/: search_index.json
docs/: AGENT_CONTEXT.md  DEV_GUIDELINES.md  ROADMAP.md  TRINITY_LOCK.md  WHITE_PAPER.md  getting_started.md  index.md  reference.md
src/geas_ai/: bolt.py  main.py  state.py
src/pact_ai/: __init__.py  main.py  utils.py
src/pact_cli/: main.py  utils.py
tests/: conftest.py  test_agents.py  test_core.py
tests/commands/: test_cli_identity.py  test_cli_identity_edge.py  test_init_workflow.py  test_lifecycle.py  test_prove.py  test_seal_ledger.py  test_status_verify_approve.py
tests/core/: test_bolt.py  test_identity.py  test_intent_engine.py  test_manifest.py  test_state.py  test_testing.py  test_verification.py  test_walker.py
v0.1.0/: 404.html  index.html  objects.inv
v0.1.0/WHITE_PAPER/: index.html
v0.1.0/getting_started/: index.html
v0.1.0/reference/: index.html
v0.1.0/search/: search_index.json
v0.1.1/: objects.inv
v0.1.1/WHITE_PAPER/: index.html
v0.1.1/reference/: index.html
v0.1.1/search/: search_index.json
v0.2.1/: objects.inv
v0.2.1/AGENT_CONTEXT/: index.html
v0.2.1/getting_started/: index.html
v0.2.1/search/: search_index.json
(+83 files in other folders)
