[project]
name = "geas-ai"
version = "0.1.1"
readme = "README.md"
authors = [
    { name = "Raul De Maio"}
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.3",
    "pathspec>=0.12.1",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "ruamel-yaml>=0.19.1",
    "typer>=0.21.0",
]

[project.urls]
Documentation = "https://radema.github.io/geas-ai/"

[project.scripts]
geas = "geas_ai.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
docs = [
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "pydantic>=2.12.5",
]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "geas_ai.commands.*"
disallow_untyped_decorators = false
